Fixed the login issue, App Title, search textbox placeholder

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="apple-itunes-app" content="app-id=1439459256">
   <meta name="google-play-app" content="app-id=com.cta.lukas">
-  <title>Lukas Liquor Superstore</title>
+  <title>BottleRover: Alcohol OnDemand</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
